--- a/latte_new_journel_/reference.bib
+++ b/latte_new_journel_/reference.bib
@@ -9,8 +9,6 @@
   url = {https://arxiv.org/abs/1412.6980},
   note = {arXiv:1412.6980 [cs.LG]. Accessed 3 Oct 2025}
 }
-,
-  urldate = {2025-10-03}
 
 @inproceedings{johnson2016perceptual,
   author = {Johnson, Justin and Alahi, Alexandre and Fei-Fei, Li},
@@ -136,7 +134,6 @@
   url = {https://www.nature.com/articles/s41598-025-05674-x}
 }
 
-% Added web/dataset/software entries on 3 Oct 2025
 @misc{fpbase_site,
   author       = {{FPbase contributors}},
   title        = {FPbase: A community-editable fluorescent protein database},
@@ -150,11 +147,10 @@
   author       = {Ahn, Danny},
   title        = {Fluorescent Protein Dataset (Kaggle)},
   howpublished = {\url{https://www.kaggle.com/datasets/dannyahn/fluorescent-protein-dataset}},
+  publisher    = {Kaggle},
   note         = {Accessed 3 Oct 2025}
 }
-,
-  urldate = {2025-10-03}
-}
+
 
 @misc{latte_github_repo,
   author       = {Ahn, Danny},             
@@ -207,6 +203,7 @@
   address   = {Cham},
   doi       = {10.1007/978-3-030-54256-6}
 }
+
 @article{Camacho2009,
   author  = {Camacho, Christiam and Coulouris, George and Avagyan, Vahram and Ma, Ning and Papadopoulos, Jason and Bealer, Kevin and Madden, Thomas L.},
   title   = {BLAST+: Architecture and applications},
@@ -232,4 +229,67 @@
   journal = {arXiv preprint arXiv:1807.05356},
   year    = {2018},
   url     = {https://arxiv.org/abs/1807.05356}
+}
+
+@inproceedings{vaswani2017attention,
+  author    = {Vaswani, Ashish and Shazeer, Noam and Parmar, Niki and Uszkoreit, Jakob and Jones, Llion and Gomez, Aidan N. and Kaiser, {\L}ukasz and Polosukhin, Illia},
+  title     = {Attention Is All You Need},
+  booktitle = {Proceedings of the 31st International Conference on Neural Information Processing Systems (NIPS)},
+  year      = {2017},
+  pages     = {5998--6008},
+  note      = {arXiv:1706.03762}
+}
+
+
+@article{kingma2013autoencoding,
+  author  = {Kingma, Diederik P. and Welling, Max},
+  title   = {Auto-Encoding Variational Bayes},
+  journal = {arXiv preprint arXiv:1312.6114},
+  year    = {2014}
+}
+
+
+@article{lloyd1982least,
+  author  = {Lloyd, Stuart P.},
+  title   = {Least Squares Quantization in PCM},
+  journal = {IEEE Transactions on Information Theory},
+  year    = {1982},
+  volume  = {28},
+  number  = {2},
+  pages   = {129--137},
+  doi     = {10.1109/TIT.1982.1056489}
+}
+
+
+@article{murtagh2014ward,
+  author  = {Murtagh, Fionn and Legendre, Pierre},
+  title   = {Ward's Hierarchical Agglomerative Clustering Method: Which Algorithms Implement Ward's Criterion?},
+  journal = {Journal of Classification},
+  year    = {2014},
+  volume  = {31},
+  number  = {3},
+  pages   = {274--295},
+  doi     = {10.1007/s00357-014-9161-z}
+}
+
+
+@inproceedings{indyk1998approximate,
+  author    = {Indyk, Piotr and Motwani, Rajeev},
+  title     = {Approximate Nearest Neighbors: Towards Removing the Curse of Dimensionality},
+  booktitle = {Proceedings of the 30th Annual ACM Symposium on Theory of Computing (STOC)},
+  year      = {1998},
+  pages     = {604--613},
+  doi       = {10.1145/276698.276876}
+}
+
+
+@article{jegou2011product,
+  author  = {J{\'e}gou, Herv{\'e} and Douze, Matthijs and Schmid, Cordelia},
+  title   = {Product Quantization for Nearest Neighbor Search},
+  journal = {IEEE Transactions on Pattern Analysis and Machine Intelligence},
+  year    = {2011},
+  volume  = {33},
+  number  = {1},
+  pages   = {117--128},
+  doi     = {10.1109/TPAMI.2010.57}
 }
